--- a/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
+++ b/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -37,48 +37,258 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>New cases in April 2020</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>New cases</th>\n",
+       "      <th>New deaths</th>\n",
+       "      <th>New recovered</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>13510</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>197</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>188</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13511</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>259</td>\n",
+       "      <td>15</td>\n",
+       "      <td>67</td>\n",
+       "      <td>177</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13512</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>847</td>\n",
+       "      <td>58</td>\n",
+       "      <td>61</td>\n",
+       "      <td>728</td>\n",
+       "      <td>131</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13513</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>390</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>366</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13514</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13515</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13516</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>28</td>\n",
+       "      <td>248</td>\n",
+       "      <td>778</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13517</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>571</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>536</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>13518</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>4862</td>\n",
+       "      <td>20</td>\n",
+       "      <td>422</td>\n",
+       "      <td>4420</td>\n",
+       "      <td>303</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13519</td>\n",
+       "      <td>4/1/2020</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>10711</td>\n",
+       "      <td>146</td>\n",
+       "      <td>1436</td>\n",
+       "      <td>9129</td>\n",
+       "      <td>531</td>\n",
+       "      <td>18</td>\n",
+       "      <td>341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0      Date       Country/Region  Confirmed  Deaths  Recovered  \\\n",
+       "0       13510  4/1/2020          Afghanistan        197       4          5   \n",
+       "1       13511  4/1/2020              Albania        259      15         67   \n",
+       "2       13512  4/1/2020              Algeria        847      58         61   \n",
+       "3       13513  4/1/2020              Andorra        390      14         10   \n",
+       "4       13514  4/1/2020               Angola          8       2          1   \n",
+       "5       13515  4/1/2020  Antigua and Barbuda          7       0          0   \n",
+       "6       13516  4/1/2020            Argentina       1054      28        248   \n",
+       "7       13517  4/1/2020              Armenia        571       4         31   \n",
+       "8       13518  4/1/2020            Australia       4862      20        422   \n",
+       "9       13519  4/1/2020              Austria      10711     146       1436   \n",
+       "\n",
+       "   Active  New cases  New deaths  New recovered  \n",
+       "0     188         22           0              0  \n",
+       "1     177         16           0             15  \n",
+       "2     728        131          14             15  \n",
+       "3     366         14           2              0  \n",
+       "4       5          1           0              0  \n",
+       "5       7          0           0              0  \n",
+       "6     778          0           1              8  \n",
+       "7     536         39           1              1  \n",
+       "8    4420        303           2             64  \n",
+       "9    9129        531          18            341  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"COVID-19_global_Avril.csv\")\n",
+    "\n",
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Avril new cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
        "      <td>US</td>\n",
        "      <td>888804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>61</th>\n",
        "      <td>France</td>\n",
        "      <td>140313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>UK</td>\n",
+       "      <th>183</th>\n",
+       "      <td>United Kingdom</td>\n",
        "      <td>139956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>162</th>\n",
        "      <td>Spain</td>\n",
        "      <td>127546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>178</th>\n",
        "      <td>Turkey</td>\n",
        "      <td>106673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>142</th>\n",
        "      <td>Russia</td>\n",
        "      <td>104161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>84</th>\n",
        "      <td>Italy</td>\n",
        "      <td>99671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>65</th>\n",
        "      <td>Germany</td>\n",
        "      <td>91201</td>\n",
        "    </tr>\n",
@@ -87,30 +297,38 @@
        "</div>"
       ],
       "text/plain": [
-       "   Country  New cases in April 2020\n",
-       "0       US                   888804\n",
-       "1   France                   140313\n",
-       "2       UK                   139956\n",
-       "3    Spain                   127546\n",
-       "4   Turkey                   106673\n",
-       "5   Russia                   104161\n",
-       "6    Italy                    99671\n",
-       "7  Germany                    91201"
+       "     Country/Region  Avril new cases\n",
+       "179              US           888804\n",
+       "61           France           140313\n",
+       "183  United Kingdom           139956\n",
+       "162           Spain           127546\n",
+       "178          Turkey           106673\n",
+       "142          Russia           104161\n",
+       "84            Italy            99671\n",
+       "65          Germany            91201"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"Covid-19.csv\")\n",
-    "data.head(9)"
+    "#converting the type of Date Field from string to datetime\n",
+    "data['Date'] = pd.to_datetime(data['Date'])\n",
+    "\n",
+    "#creating YearMonth field for the ease of reporting and visualization\n",
+    "data['YearMonth'] = data['Date'].map(lambda date: 100*date.year + date.month)\n",
+    "\n",
+    "data['Avril new cases'] = data['New cases']\n",
+    "tx_revenue = data.groupby(['Country/Region'])['Avril new cases'].sum().reset_index()\n",
+    "tx_revenue = tx_revenue.sort_values(by='Avril new cases', ascending=False)\n",
+    "tx_revenue.head(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +445,7 @@
        "4         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
