--- a/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
+++ b/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -210,20 +210,20 @@
        "9    9129        531          18            341  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"COVID-19_global_Avril.csv\")\n",
+    "data = pd.read_csv(\"COVID-19_global_April.csv\")\n",
     "\n",
     "data.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country/Region</th>\n",
-       "      <th>Avril new cases</th>\n",
+       "      <th>April 2020 new cases</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -297,18 +297,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Country/Region  Avril new cases\n",
-       "179              US           888804\n",
-       "61           France           140313\n",
-       "183  United Kingdom           139956\n",
-       "162           Spain           127546\n",
-       "178          Turkey           106673\n",
-       "142          Russia           104161\n",
-       "84            Italy            99671\n",
-       "65          Germany            91201"
+       "     Country/Region  April 2020 new cases\n",
+       "179              US                888804\n",
+       "61           France                140313\n",
+       "183  United Kingdom                139956\n",
+       "162           Spain                127546\n",
+       "178          Turkey                106673\n",
+       "142          Russia                104161\n",
+       "84            Italy                 99671\n",
+       "65          Germany                 91201"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,15 +320,15 @@
     "#creating YearMonth field for the ease of reporting and visualization\n",
     "data['YearMonth'] = data['Date'].map(lambda date: 100*date.year + date.month)\n",
     "\n",
-    "data['Avril new cases'] = data['New cases']\n",
-    "tx_revenue = data.groupby(['Country/Region'])['Avril new cases'].sum().reset_index()\n",
-    "tx_revenue = tx_revenue.sort_values(by='Avril new cases', ascending=False)\n",
-    "tx_revenue.head(8)"
+    "data['April 2020 new cases'] = data['New cases']\n",
+    "data1 = data.groupby(['Country/Region'])['April 2020 new cases'].sum().reset_index()\n",
+    "data1 = data1.sort_values(by='April 2020 new cases', ascending=False)\n",
+    "data1.head(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -354,12 +354,6 @@
        "      <th></th>\n",
        "      <th>Day in April 2020</th>\n",
        "      <th>Daily New Deaths in Iran</th>\n",
-       "      <th>https://www.worldometers.info/coronavirus/country/iran/</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -367,85 +361,41 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>138</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>124</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>134</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>158</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>151</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Day in April 2020  Daily New Deaths in Iran  \\\n",
-       "0                  1                       138   \n",
-       "1                  2                       124   \n",
-       "2                  3                       134   \n",
-       "3                  4                       158   \n",
-       "4                  5                       151   \n",
-       "\n",
-       "   https://www.worldometers.info/coronavirus/country/iran/  Unnamed: 3  \\\n",
-       "0                                                NaN               NaN   \n",
-       "1                                                NaN               NaN   \n",
-       "2                                                NaN               NaN   \n",
-       "3                                                NaN               NaN   \n",
-       "4                                                NaN               NaN   \n",
-       "\n",
-       "   Unnamed: 4  Unnamed: 5  Unnamed: 6  Unnamed: 7  \n",
-       "0         NaN         NaN         NaN         NaN  \n",
-       "1         NaN         NaN         NaN         NaN  \n",
-       "2         NaN         NaN         NaN         NaN  \n",
-       "3         NaN         NaN         NaN         NaN  \n",
-       "4         NaN         NaN         NaN         NaN  "
+       "   Day in April 2020  Daily New Deaths in Iran\n",
+       "0                  1                       138\n",
+       "1                  2                       124\n",
+       "2                  3                       134\n",
+       "3                  4                       158\n",
+       "4                  5                       151"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
