--- a/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
+++ b/PyLearn7-Assignment39/Covid-19 statistics/covid-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -210,20 +210,20 @@
        "9    9129        531          18            341  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"COVID-19_global_April.csv\")\n",
+    "data = pd.read_csv(\"input/COVID-19_global_April.csv\")\n",
     "\n",
     "data.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "65          Germany                 91201"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -395,19 +395,19 @@
        "4                  5                       151"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data1 = pd.read_csv(\"Covid-19_Iran.csv\")\n",
+    "data1 = pd.read_csv(\"input/Covid-19_Iran.csv\")\n",
     "data1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
